all blogs page responisved + sidebar menu spacing resolved

--- a/src/Pages/Dashboard/Components/Blogs/AllBlogs/AllBlogs.scss
+++ b/src/Pages/Dashboard/Components/Blogs/AllBlogs/AllBlogs.scss
@@ -1,46 +1,55 @@
-.allBlogsContainer{
+.allBlogsContainer {
     height: 100%;
-    .blogsBox{
+
+    .blogsBox {
         padding-top: 5rem;
-        gap: 3rem 1rem;
+        gap: 3rem;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-auto-rows: 450px;
+        grid-auto-flow: dense;
 
-        .blog{
+        .blog {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
-            align-items: center;
+            justify-content: space-between;
+            gap: .5rem;
             padding: 1rem;
-            width: 350px;
             border-radius: 10px;
             box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-           
-            img{
+
+            img {
                 width: 100%;
-                height: 220px;
+                height: 200px;
                 border-radius: 10px;
             }
-            .details{
+
+            .details {
                 display: flex;
                 flex-direction: column;
                 gap: .5rem;
-                .title{
+
+                .title {
                     font-size: 20px;
                     font-weight: bold;
                 }
-                .content{
-                    min-height: 114px;
+
+                .content {
+                    height: 80px;
                     text-align: justify;
                 }
             }
-            .blogButtons{
+
+            .blogButtons {
                 width: 100%;
                 padding-top: .5rem;
                 padding-bottom: 1rem;
                 display: flex;
                 gap: 1rem;
-                .dangerBtn{
+
+                .dangerBtn {
                     background-color: red !important;
                 }
             }
